@@ -1,3 +1,8 @@
+2008-10-16  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/37664
+	* gcc.c-torture/compile/pr37664.c: New test.
+
 2008-10-16  Joseph Myers  <joseph@codesourcery.com>
 
 	PR middle-end/37418
